Update and position fixes for Explorer meanprofile chart
- Fix update element issue, that accidentally triggered selection callback on load
- Keep mouse tooltip from going out of bounds
- Move save image button to bottom of chart, preventing it from becoming
hidden on low width

--- a/public/css/explorer/chart-meanprofile.css
+++ b/public/css/explorer/chart-meanprofile.css
@@ -102,7 +102,7 @@
 }
 
 .meanprofile__save-image {
-  position: absolute;
-  right: 0;
-  top: -33px
+  float: right;
+  position: relative;
+  top: 5px;
 }
