--- a/public/css/explorer/explorer.css
+++ b/public/css/explorer/explorer.css
@@ -10,7 +10,6 @@ body {
   line-height: 1.1;
 	margin: 0;
   overflow-x: hidden;
-  overflow-y: hidden;
 	padding: 0;
 }
 
